--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.6",
+    "globe.gl": "^2.41.5",
+    "postprocessing": "^6.37.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "three": "^0.176.0",
+    "three-globe": "^2.42.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
