--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "postprocessing": "^6.37.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
