--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "three": "^0.176.0",
