--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.6",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
     "globe.gl": "^2.41.5",
     "next": "^15.3.5",
