Se agrego la uta de login y CRUD de usuarios

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -4,12 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-cors = "*"
 sqlalchemy = "*"
 alembic = "*"
-flask-migrate = "*"
 dotenv = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+flask-cors = "*"
+python-dotenv = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
