Actualizado servicios y destinos

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@popperjs/core": "^2.11.8",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
