--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL=http://127.0.0.1:5000
+
+# .env
+VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
+VITE_CLOUDINARY_UPLOAD_PRESET=canchago-preset
