--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,4 +20,4 @@ flask-jwt-extended = "*"
 python_version = "3.13"
 
 [scripts]
-start="flask run -p 3001 -h 0.0.0.0"
+start="flask run --host=0.0.0.0 --port=8080"
