--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,6 @@
-VITE_BACKEND_URL=http://192.168.68.113:8080 
+# VITE_BACKEND_URL=http://192.168.68.113:8080 
+
+VITE_BACKEND_URL=http://localhost:5000
 
 
 VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
