--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@
 # FLASK_APP=app.py
 # FLASK_ENV=development
 # JWT_SECRET=tu-secreto
+
+DATABASE_URL=postgresql://abcd_user:abcd_2025@db:5432/abcdatabase
+FLASK_APP=app.py
+FLASK_ENV=development
+JWT_SECRET=tu-secreto
