--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,22 @@
 # volumes:
 #   pgdata:
 
-version: '3.8'
+# version: '3.8'
 services:
+
+  db:
+    image: postgres:14
+    restart: always
+    environment:
+      POSTGRES_USER: abcd_user
+      POSTGRES_PASSWORD: abcd_2025
+      POSTGRES_DB: abcdatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5433:5432"
+
+
   backend:
     build:
       context: ./backend
@@ -45,6 +59,18 @@ services:
     environment:
       - FLASK_ENV=development
       - FLASK_APP=app.py
+    depends_on:
+      - db
+    command: >
+      sh -c "
+        flask db init 2>/dev/null || true &&
+        flask db migrate -m 'auto' 2>/dev/null || true &&
+        flask db upgrade &&
+        flask run --host=0.0.0.0 --port=5000
+      "
+
+#Hay que revisar que no hace los insert automaticamente
+#  python seed.py &&
 
   frontend:
     build:
@@ -62,7 +88,8 @@ services:
     # environment:
     #   - VITE_BACKEND_URL=http://backend:5000
 
-
+volumes:
+  postgres_data:  # Volumen nombrado para persistencia
 
 
 
