--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,7 @@
 # VITE_BACKEND_URL=http://192.168.68.113:8080 
 
-VITE_BACKEND_URL=http://localhost:5000
+# VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=http://localhost:5000/api
 
 
 VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
