--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,9 @@
 # VITE_BACKEND_URL=http://192.168.68.113:8080 
 
 # VITE_BACKEND_URL=http://localhost:5000
-VITE_BACKEND_URL=http://localhost:5000/api
+VITE_BACKEND_URL=http://69.62.87.87:5000
+
+
 
 
 VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
