--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # VITE_BACKEND_URL=http://192.168.68.113:8080 
 
-VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=http://69.62.87.87:5000
 # VITE_BACKEND_URL=http://69.62.87.87:5000
 
 
