--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-phone-number-input": "^3.4.12",
+    "react-player": "^2.10.1",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "three": "^0.176.0",
