--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@
 # FLASK_ENV=development
 # JWT_SECRET=tu-secreto
 
-DATABASE_URL=postgresql+psycopg://neondb_owner:npg_xsBDCO19fVhS@ep-blue-math-a4s3507k-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:npg_xsBDCO19fVhS@ep-blue-math-a4s3507k-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
 # =postgresql://abcd_user:abcd_2025@db:5432/abcdatabase
 FLASK_APP=app.py
 FLASK_ENV=development
