--- a/frontend/.env
+++ b/frontend/.env
@@ -10,3 +10,7 @@ VITE_BACKEND_URL=
 
 VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
 VITE_CLOUDINARY_UPLOAD_PRESET=canchago-preset
+
+# Matomo Cloud (set after creating your site)
+VITE_MATOMO_URL_BASE=
+VITE_MATOMO_SITE_ID=
