--- a/frontend/.env
+++ b/frontend/.env
@@ -1,16 +1,11 @@
 # VITE_BACKEND_URL=http://192.168.68.113:8080 
-
-VITE_BACKEND_URL=
 # VITE_BACKEND_URL=https://abcdlanguages.com/api
 # VITE_BACKEND_URL=http://69.62.87.87:5000
-# VITE_BACKEND_URL=http://localhost:5000
-
-
-
 
 VITE_CLOUDINARY_CLOUD_NAME=dn3qxqsm5
 VITE_CLOUDINARY_UPLOAD_PRESET=canchago-preset
 
 # Matomo Cloud (set after creating your site)
-VITE_MATOMO_URL_BASE=
-VITE_MATOMO_SITE_ID=
+VITE_MATOMO_URL_BASE=https://abcdlanguages.matomo.cloud
+VITE_MATOMO_SITE_ID=1
+VITE_BACKEND_URL=
