--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
+VITE_MATOMO_URL_BASE=https://abcdlanguages.matomo.cloud
+VITE_MATOMO_SITE_ID=1
